--- a/OOP_3/MainWindow.xaml
+++ b/OOP_3/MainWindow.xaml
@@ -36,5 +36,6 @@
                 </Border>
             </StackPanel>
         </Border>
+        <Button x:Name="Go" Content="Отправиться" HorizontalAlignment="Left" Margin="707,10,0,0" VerticalAlignment="Top" Width="75" Click="Go_Click"/>
     </Grid>
 </Window>
